--- a/View/DesktopViews/TouristHomePage.xaml
+++ b/View/DesktopViews/TouristHomePage.xaml
@@ -5,24 +5,24 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="1594"
       Title="TouristHomePage">
     <Page.Resources>
         <Style TargetType="ComboBox" x:Key="ComboBoxStyle">
-            <Setter Property="Width" Value="200"/>
-            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Height" Value="71"/>
             <Setter Property="Margin" Value="5"/>
         </Style>
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
-            <Setter Property="Width" Value="200"/>
-            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Height" Value="71"/>
             <Setter Property="Margin" Value="5"/>
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="#88C0D0"/>
             <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="71"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="FontSize" Value="16"/>
@@ -39,7 +39,8 @@
                 BorderThickness="1" 
                 Background="#2E3440"
                 Grid.ColumnSpan="3"
-                Margin="10">
+                Margin="10"
+                Height="140">
             <Grid Margin="5, 25, 5, 5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -82,13 +83,14 @@
 
         <ScrollViewer Grid.Row="1" 
                       Margin="10, 5, 10, 10">
-        <ItemsControl ItemsSource="{Binding ToursOnDisplay}"
-                      Margin="0, 5, 5, 5">
+        <ItemsControl ItemsSource="{Binding ToursOnDisplay}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Border BorderBrush="Black" 
                             BorderThickness="1"
-                            Margin="0, 5">
+                            Width="1396"
+                            Height="265"
+                            Margin="0, 10">
                     <Grid Margin="5">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
@@ -101,17 +103,20 @@
                                            Grid.Column="0" 
                                            SnapsToDevicePixels="True"
                                            Margin="5"
-                                           Width="400"/>           
+                                           Width="230"
+                                           Height="230"/>           
                         
                                     <StackPanel Grid.Column="1">
-                                        <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" FontSize="32" FontWeight="Bold"/>
-                                        <TextBlock Text="{Binding LocationId, UpdateSourceTrigger=PropertyChanged}"/>
-                                        <TextBlock Text="{Binding LanguageId, UpdateSourceTrigger=PropertyChanged}"/>
-                                        <TextBlock Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" FontSize="40" FontWeight="Bold"/>
+                                        <TextBlock Text="{Binding LocationId, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
+                                        <TextBlock Text="{Binding LanguageId, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
+                                        <TextBlock Text="{Binding Duration, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
                                     </StackPanel>
-                                    <TextBlock Grid.Column="2" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}">
-                                        
-                                    </TextBlock>
+                                    <Border Grid.Column="2"
+                                            BorderBrush="Black" 
+                                            BorderThickness="1">
+                                        <TextBlock Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
+                                    </Border>
                                     <Button x:Name="ReservationButton"
                                             Grid.Column="3"
                                             Click="ReservationButton_Click"
