--- a/View/DesktopViews/TourReservationWindow.xaml
+++ b/View/DesktopViews/TourReservationWindow.xaml
@@ -6,35 +6,160 @@
         xmlns:local="clr-namespace:BookingApp.View.DesktopViews"
         mc:Ignorable="d"
         Title="ReservationWindow" Height="768" Width="1366">
-    <Grid>
-        <WrapPanel Margin="5">
-            <StackPanel>
-                <WrapPanel>
-                    <TextBox x:Name="TouristName" 
-                 Width="100"></TextBox>
-                    <TextBox x:Name="TouristSurname" 
-                 Width="100"></TextBox>
-                    <TextBox x:Name="TouristAge" 
-                 Width="100"></TextBox>
-                    <Button x:Name="AddTouristButton"
-                Click="AddTouristButton_Click"
-                Width="30">+</Button>
-                </WrapPanel>
-                <WrapPanel>
-                    <TextBox x:Name="PassengerName" 
-                 Width="100"></TextBox>
-                    <TextBox x:Name="PassengerSurname" 
-                 Width="100"></TextBox>
-                    <TextBox x:Name="PassengerAge" 
-                 Width="100"></TextBox>
-                    <Button x:Name="AddPassengerButton"
-                Click="AddPassengerButton_Click"
-                Width="30">+</Button>
-                </WrapPanel>
+    <Window.Resources>
+        <Style TargetType="TextBox" x:Key="TextBoxStyle">
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="Button" x:Key="ButtonStyle">
+            <Setter Property="Background" Value="#88C0D0"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="Auto"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="40"/>
+        </Style>
+    </Window.Resources>
+    <Grid Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
+            <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" 
+        BorderBrush="Black" 
+        BorderThickness="1" 
+        Background="#2E3440"
+        Grid.ColumnSpan="3"
+        Margin="10"
+        Height="140">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock FontSize="24"
+                               Foreground="White"
+                               Grid.Row="0"
+                               >Personal information</TextBlock>
+                    <WrapPanel Grid.Row="1"
+                               Margin="0, 15, 0, 0">
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Name</TextBlock>
+                            <TextBox x:Name="TouristName" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
 
-                <DataGrid ItemsSource="{Binding Passengers, UpdateSourceTrigger=PropertyChanged}"
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Surname</TextBlock>
+                            <TextBox x:Name="TouristSurname" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Age</TextBlock>
+                            <TextBox x:Name="TouristAge" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
+                        
+                    </WrapPanel>
+                    <Button x:Name="AddTouristButton"
+                            Click="AddTouristButton_Click"
+                            Style="{StaticResource ButtonStyle}"
+                            Grid.RowSpan="2"
+                            Grid.Column="1"
+                            >Add</Button>
+                </Grid>
+                
+            </Border>
+            <Border Grid.Row="1" 
+        BorderBrush="Black" 
+        BorderThickness="1" 
+        Background="#2E3440"
+        Grid.ColumnSpan="3"
+        Margin="10"
+        Height="140">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock FontSize="24"
+                               Foreground="White"
+                               Grid.Row="0"
+                               >Personal information</TextBlock>
+                    <WrapPanel Grid.Row="1"
+                               Margin="0, 15, 0, 0">
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Name</TextBlock>
+                            <TextBox x:Name="PassengerName" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
+
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Surname</TextBlock>
+                            <TextBox x:Name="PassengerSurname" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
+                        <StackPanel>
+                            <TextBlock FontSize="18"
+           Foreground="White"
+           Grid.Row="0"
+                                       Margin="5, 0">Age</TextBlock>
+                            <TextBox x:Name="PassengerAge" 
+Style="{StaticResource TextBoxStyle}"></TextBox>
+                        </StackPanel>
+
+                    </WrapPanel>
+                    <Button x:Name="AddPassengerButton"
+                            Click="AddPassengerButton_Click"
+                            Style="{StaticResource ButtonStyle}"
+                            Grid.RowSpan="2"
+                            Grid.Column="1"
+                            >Add</Button>
+                </Grid>
+
+            </Border>
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+            <DataGrid ItemsSource="{Binding Passengers, UpdateSourceTrigger=PropertyChanged}"
               AutoGenerateColumns="False"
-              CanUserAddRows="False">
+              CanUserAddRows="False"
+                      Grid.Column="0"
+                      Width="500"
+                      Height="330">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Name" 
                                 Binding="{Binding Name, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"></DataGridTextColumn>
@@ -55,16 +180,19 @@
 
                 </DataGrid>
                 <Button x:Name="ConfirmReservationButton"
-            Width="20" 
-            Height="20"
-            Click="ConfirmReservationButton_Click"></Button>
-            </StackPanel>
+            Style="{StaticResource ButtonStyle}"
+            Click="ConfirmReservationButton_Click"
+                        Grid.Column="1"
+                        VerticalAlignment="Center">Book</Button>
+            </Grid>
+        </Grid>
             <Grid Width="568"
-                  Height="685">
+                  Height="685"
+                  Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Image Grid.Row="0"
                        Margin="0, 0, 0, 5"
@@ -82,21 +210,27 @@
 
                     </Image>
                 </WrapPanel>
-                <WrapPanel Grid.Row="2">
-                    <StackPanel Width="214">
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Width="214"
+                                Grid.Column="0">
                         <TextBlock Text="{Binding SelectedTour.Name, UpdateSourceTrigger=PropertyChanged}" FontSize="40" FontWeight="Bold"/>
-                        <TextBlock Text="{Binding SelectedTour.LocationId, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                        <TextBlock Text="{Binding SelectedTour.LanguageId, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding SelectedTour.LocationTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding SelectedTour.LanguageTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
                         <TextBlock Text="{Binding SelectedTour.Duration, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
                     </StackPanel>
                     <Border BorderBrush="Black" 
-                            BorderThickness="1">
+                            BorderThickness="1"
+                            Grid.Column="1">
                         <TextBlock  Width="354"
                                     Height="269"
                                     Text="{Binding SelectedTour.Description, UpdateSourceTrigger=PropertyChanged}"/>
                     </Border>
-                </WrapPanel>
+                </Grid>
             </Grid>
-        </WrapPanel>
+
     </Grid>
 </Window>
