--- a/View/AndroidViews/AccommodationPage.xaml
+++ b/View/AndroidViews/AccommodationPage.xaml
@@ -8,31 +8,58 @@
       d:DesignHeight="624" d:DesignWidth="430"
       Title="AccommodationPage">
     <Page.Resources>
-        <BitmapImage x:Key="AddIcon" UriSource="../../Resources/Images/add2.png"/>
+        <BitmapImage x:Key="AddIcon" UriSource="../../Resources/Images/add-icon3.png"/>
+        <BitmapImage x:Key="RenovationsIcon" UriSource="../../Resources/Images/renovation-icon.png"/>
+        <BitmapImage x:Key="GuidanceIcon" UriSource="../../Resources/Images/guidance-icon.png"/>
+        <BitmapImage x:Key="StatisticsIcon" UriSource="../../Resources/Images/statistics-icon.png"/>
     </Page.Resources>
     <Grid Background="#BABDE2">
         <Grid.RowDefinitions>
-            <RowDefinition Height="90"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="90"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="260"/>
+                <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
 
-            <Border BorderBrush="Black" BorderThickness="2" Grid.Column="1" Height="60" VerticalAlignment="Center" CornerRadius="20">
-                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-
-                    <Button Width="40" Height="40" Click="AddAccomodation_Click" Background="#BABDE2">
-                        <Image Source="{StaticResource AddIcon}"/>
-                    </Button>
-                    <Label Content="Add New Accommodation" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
+            <Button x:Name="AddButton" Click="AddAccomodation_Click" Grid.Column="1" Height="80" Width="100" Background="Transparent">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Image Source="{StaticResource AddIcon}" Width="40" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Text="Add" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </StackPanel>
-            </Border>
+            </Button>
+
+            <Button x:Name="RenovationsButton" Click="RenovationsButton_Click" Grid.Column="3" Height="80" Width="100" Background="Transparent">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Image Source="{StaticResource RenovationsIcon}" Width="40" Height="40"/>
+                    <TextBlock Text="Renovations" FontSize="16"/>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="StatisticsButton" Click="StatisticsButton_Click" Grid.Column="5" Height="80" Width="100" Background="Transparent">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Image Source="{StaticResource StatisticsIcon}" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Statistics" FontSize="16"/>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="GuidanceButton" Click="GuidanceButton_Click" Grid.Column="7" Height="80" Width="100" Background="Transparent">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Image Source="{StaticResource GuidanceIcon}" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <TextBlock Text="Guidance" FontSize="16"/>
+                </StackPanel>
+            </Button>
         </Grid>
-        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="0,2,0,0">
+        <Border Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,2">
             <ScrollViewer Height="500" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalScrollBarVisibility="Hidden">
                 <ItemsControl Height="900" ItemsSource="{Binding AccommodationDTOs}">
                     <ItemsControl.ItemTemplate>
