--- a/View/AndroidViews/ReservationReviewsPage.xaml
+++ b/View/AndroidViews/ReservationReviewsPage.xaml
@@ -19,19 +19,19 @@
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="60"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="AssignGradeButton" Grid.Row="0" Content="Assign a Grade" Grid.Column="1" Width="120" Height="40" Click="AssignGradeButton_Click">
+                    <Button x:Name="AssignGradeButton" Grid.Row="1" Content="Assign a Grade" Grid.Column="1" Width="120" Height="40" Click="AssignGradeButton_Click">
                         
                     </Button>
 
-                    <Button x:Name="ViewGradeButton" Grid.Row="0" Grid.Column="2" Width="120" Height="40" Content="View Guest Grade" Click="ViewGradeButton_Click">
+                    <Button x:Name="ViewGradeButton" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Content="View Guest Grade" Click="ViewGradeButton_Click">
                         </Button>
 
                     <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}"
-          SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}"
-          SelectionMode="Single" Grid.Row="1" Grid.ColumnSpan="4" Grid.Column="0" SelectionChanged="ListView_SelectionChanged">
+          SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"
+          SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" SelectionChanged="ListView_SelectionChanged">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Accommodation" Width="160" DisplayMemberBinding="{Binding AccommodationName}"/>
@@ -40,7 +40,7 @@
                                 <GridViewColumn Header="Graded" Width="80">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
-                                            <CheckBox IsChecked="{Binding Graded}" IsEnabled="False"/>
+                                            <CheckBox IsChecked="{Binding Graded}" IsEnabled="False" HorizontalAlignment="Center"/>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
@@ -56,7 +56,48 @@
             </TabItem>
             
             <TabItem Header="Requests"  Width="120" Height="40">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="50"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="60"/>
+                    </Grid.RowDefinitions>
+                    <Button x:Name="Decline" Grid.Row="1" Content="Decline" Grid.Column="1" Width="120" Height="40" Click="Decline_Click">
+
+                    </Button>
+
+                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Content="Accept" Click="Accept_Click">
+                    </Button>
+
+                    <ListView x:Name="RequestsList" ItemsSource="{Binding RescheduleRequestDTOs, UpdateSourceTrigger=PropertyChanged}"
+                        SelectedItem="{Binding SelectedRequest, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center"
+                        SelectionMode="Single" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" SelectionChanged="RequestsList_SelectionChanged">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Accommodation" Width="130" DisplayMemberBinding="{Binding AccommodationName}"/>
+                                <GridViewColumn Header="Old Dates" Width="90" DisplayMemberBinding="{Binding OldDates}"/>
+                                <GridViewColumn Header="New Dates" Width="90" DisplayMemberBinding="{Binding NewDates}"/>
+                                <GridViewColumn Header="Available" Width="80">
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox IsChecked="{Binding IsAvailable}" IsEnabled="False" HorizontalAlignment="Center"/>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Height" Value="50"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                    </ListView>
+                </Grid>
             </TabItem>
         </TabControl>
 
